--- a/src/main/resources/templates/admin/artists.html
+++ b/src/main/resources/templates/admin/artists.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>아티스트 관리 | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
     <link rel="stylesheet" th:href="@{/css/admin-artists.css}" />
 
