--- a/src/main/resources/templates/admin/songs.html
+++ b/src/main/resources/templates/admin/songs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>음원 관리 | PeachMusic</title>
 
-    <link rel="stylesheet" th:href="@{/css/design-system.css}" />
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
     <link rel="stylesheet" th:href="@{/css/admin-songs.css}" />
 
