--- a/src/main/resources/templates/mypage/liked-albums.html
+++ b/src/main/resources/templates/mypage/liked-albums.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Liked Albums | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/liked-albums.css}">
     <script th:src="@{/js/sidebar.js}" defer></script>
