--- a/src/main/resources/templates/admin/admin-jamendo.html
+++ b/src/main/resources/templates/admin/admin-jamendo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Jamendo 데이터 수집 | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
     <link rel="stylesheet" th:href="@{/css/admin-jamendo.css}" />
 
