--- a/src/main/resources/templates/admin/admin-users.html
+++ b/src/main/resources/templates/admin/admin-users.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>회원 관리 | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}"/>
     <link rel="stylesheet" th:href="@{/css/admin-users.css}"/>
 
