--- a/src/main/resources/templates/charts/charts.html
+++ b/src/main/resources/templates/charts/charts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>인기차트 | PeachMusic</title>
-
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}" />
     <link rel="stylesheet" th:href="@{/css/charts.css}" />
 
