--- a/src/main/resources/templates/playlists/my-playlists.html
+++ b/src/main/resources/templates/playlists/my-playlists.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My Playlists | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/playlists.css}">
     <script th:src="@{/js/sidebar.js}" defer></script>
