--- a/src/main/resources/templates/playlists/playlist-detail.html
+++ b/src/main/resources/templates/playlists/playlist-detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Playlist Detail</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/playlist-detail.css}">
     <script type="module" th:src="@{/js/playlist-detail.js}" defer></script>
