--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Search | PeachMusic</title>
 
+    <link rel="stylesheet" href="/css/design-system.css"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/search.css}">
     <script th:src="@{/js/sidebar.js}" defer></script>
